# headlines

./: .env.example  .gitignore  Cargo.toml  README.md  makefile  r.sh
app/: Cargo.toml  makefile
app/src/: config.rs  fonts.rs  main.rs  mode.rs  navbar.rs  state.rs  store.rs  style.rs
app/src/components/: article_card.rs  mod.rs
app/src/macros/: mod.rs  text.rs
app/src/pages/: headlines.rs  mod.rs  settings.rs
app/src/style/: colors.rs
cli/: Cargo.toml
cli/src/: main.rs
lib/: api.rs  article.rs  cache.rs  export.rs  mod.rs  newsapp.rs
lib/api/: builder.rs  category.rs  endpoint.rs  error.rs  impl.rs  macros.rs  query.rs  request.rs  search_scope.rs  tests.rs
lib/api/query/: everything.rs
lib/api/query/everything/: builder.rs
lib/article/: category.rs  collection.rs  language.rs  scope.rs  source.rs
lib/client/: builder.rs  country.rs  endpoint.rs  macros.rs  mod.rs  parser.rs  request.rs  tests.rs
lib/data/article/: category.rs  data.rs  language.rs  mod.rs  scope.rs
lib/util/: cache.rs  error.rs  external.rs  mod.rs
ui/: Cargo.toml
ui/src/: app.rs  colors.rs  fonts.rs  main.rs  mode.rs  route.rs  state.rs  style.rs
ui/src/components/: article_card.rs  footer.rs  header.rs  mod.rs  navbar.rs
ui/src/components/navbar/: button.rs
ui/src/macros/: hyperlink.rs  mod.rs
ui/src/pages/: all_articles.rs  headlines.rs  mod.rs
