[package]
name = "newsapp"
version = "0.1.0"
edition = "2021"

[workspace] 

members = [
  "cli"
]

[lib]
name = "newsapp"
path = "lib/newsapp.rs"

[dependencies]
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
eyre = "0.6.8"
color-eyre = "0.6.1"
ureq = "2.4.0"
chrono = { version = "0.4.19",  features = [ "serde" ] }
thiserror = "1.0.30"
derive_more = "0.99.17"
strum = {version = "0.24.0", features = ["derive"]}
redis = "0.21.5"
lazy_static = "1.4.0"
