[package]
name = "newsapp"
version = "0.1.0"
edition = "2021"

[workspace] 

members = [
  "cli",
  "ui"
]

[lib]
name = "newsapp"
path = "lib/newsapp.rs"

[dependencies]
eyre = "0.6.8"

serde_json = "1.0.79"
thiserror = "1.0.30"
derive_more = "0.99.17"
lazy_static = "1.4.0"

serde   = { version = "1.0.136", features = ["derive"] }
chrono  = { version = "0.4.19",  features = ["serde"]  }
strum   = { version = "0.24.0",  features = ["derive"] }
ureq    = { version = "2.4.0", optional = true }
redis   = { version = "0.21.5", optional = true }
reqwest = { version = "0.11.10", features = ["json"], optional = true }
clap    = { version = "3.1.8", features = ["derive"], optional = true }

[dev-dependencies]
tokio = { version = "1.17.0", features = ["full"]  }

[features]
default = [ "cache", "net_async" ]
net_async = [ "reqwest" ]
cache = [ "redis" ]
net_block = [ "ureq" ]
derive_clap = [ "clap" ]
