[package]
name = "headlines_app"
version = "0.1.0"
edition = "2021"


[dependencies]
eframe       = { version = "0.17.0" }
serde        = { version = "1.0.136", features = ["derive"] }
headlines      = { path = "../", features = ["egui", "cache"] }
strum        = { version = "0.24.0",  features = ["derive"] }
poll-promise = { version = "0.1.0", features = [] }

confy = "0.4.0"
tracing = "0.1.32"
tracing-subscriber = "0.3.10"
rgba_simple = "0.6.0"
paste = "1.0.7"
