[package]
name = "newsapi_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.19"
clap = { version = "3.1.8", features = ["derive"] }
colour = "0.6.0"
newsapp = { path = "../", features = ["derive_clap", "cache", "net_async"] }
tokio = { version = "1.17.0", features = ["full"], optional = true }


[features]
default = [ "tokio" ]
# cache = [
#   "newsapp/cache"
# ]
# net_block = [
#   "newsapp/net_block"
# ]
# net_async = [
#   "newsapp/net_async",
#   "tokio"
# ]

