[package]
name = "newsapp_ui"
version = "0.1.0"
edition = "2021"


[dependencies]
confy = "0.4.0"
eframe = "0.17.0"
serde = { version = "1.0.136", features = ["derive"] }
tracing = "0.1.32"
tracing-subscriber = "0.3.10"
newsapp = { path = "../" }
strum   = { version = "0.24.0",  features = ["derive"] }
poll-promise = { version = "0.1.0", features = [] }

